update gitignore, fix compile errors and makefile

--- a/src/makefile
+++ b/src/makefile
@@ -4,21 +4,33 @@
 # @date September 15, 2015
 
 OUT_EXE = jscone
-CFLAGS  = -ll
+BISON   = bison
+BISONFLAGS = -d
 LEX     = flex
 LEXSRC  = jscone_lexer.l
 LEXC    = lex.yy.c 
+LEXOBJ  = lex.yy.o
+BISONSRC= jscone_parser.y
+BISONC  = jscone_parser.tab.c
+BISONOBJ= jscone_parser.tab.o
+BISONH  = jscone_parser.tab.h
+
 
 .PHONY: all
 all: $(OUT_EXE)
 
-$(LEXC): $(LEXSRC)
+$(LEXOBJ): $(LEXSRC)
 	$(LEX) $^
+	$(CC) $(CCFLAGS) -c $(LEXC)
 
-$(OUT_EXE): $(LEXC)
-	$(CC) $^ $(CFLAGS) -o $@
+$(BISONOBJ): $(BISONSRC)
+	$(BISON) $(BISONFLAGS) $^
+	$(CC) $(CCFLAGS) -c $(BISONC) 
+
+$(OUT_EXE): $(BISONOBJ) $(LEXOBJ)
+	$(CC) $^ $(CCFLAGS) -ll -o $@
 
 .PHONY: clean
 clean:
-	rm -f $(LEXC) $(OUT_EXE)
+	rm -f $(LEXC) $(OUT_EXE) $(BISONC) $(BISONH)
 
